--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,47 +1,44 @@
 {
-    "name":  "with-popup",
-    "displayName":  "With popup",
-    "version":  "0.0.1",
-    "description":  "A basic Plasmo extension.",
-    "author":  "Plasmo Corp. \u003cfoss@plasmo.com\u003e",
-    "contributors":  [
-                         "louisgv"
-                     ],
-    "scripts":  {
-                    "dev":  "plasmo dev",
-                    "build":  "plasmo build",
-                    "package":  "plasmo package"
-                },
-    "dependencies":  {
-                         "dexie":  "^4.3.0",
-                         "plasmo":  "0.90.5",
-                         "react":  "18.2.0",
-                         "react-dom":  "18.2.0",
-                         "lucide-react":  "^0.544.0"
-                     },
-    "devDependencies":  {
-                            "@ianvs/prettier-plugin-sort-imports":  "4.1.1",
-                            "@types/chrome":  "0.0.258",
-                            "@types/node":  "20.11.5",
-                            "@types/react":  "18.2.48",
-                            "@types/react-dom":  "18.2.18",
-                            "prettier":  "3.2.4",
-                            "typescript":  "5.3.3",
-                            "autoprefixer":  "^10.4.20",
-                            "postcss":  "^8.5.0",
-                            "tailwindcss":  "^3.4.17",
-                            "tailwindcss-animate":  "^1.0.7"
-                        },
-    "manifest":  {
-                     "host_permissions":  [
-                                              "https://chatgpt.com/*",
-                                              "https://chat.openai.com/*",
-                                              "https://claude.ai/*"
-                                          ],
-                     "permissions":  [
-                                         "storage",
-                                         "offscreen",
-                                         "sidePanel"
-                                     ]
-                 }
+  "name": "vesti",
+  "displayName": "Vesti",
+  "version": "0.0.1",
+  "description": "AI Chat Memory - Capture and review your conversations",
+  "author": "Vesti",
+  "scripts": {
+    "dev": "plasmo dev",
+    "build": "plasmo build",
+    "package": "plasmo package"
+  },
+  "dependencies": {
+    "dexie": "^4.3.0",
+    "plasmo": "0.90.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "lucide-react": "^0.544.0"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
+    "@types/chrome": "0.0.258",
+    "@types/node": "20.11.5",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "prettier": "3.2.4",
+    "typescript": "5.3.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.0",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "manifest": {
+    "host_permissions": [
+      "https://chatgpt.com/*",
+      "https://chat.openai.com/*",
+      "https://claude.ai/*"
+    ],
+    "permissions": [
+      "storage",
+      "offscreen",
+      "sidePanel"
+    ]
+  }
 }
