feat(data): add quota guardrails and export serializer layer

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
     "permissions": [
       "storage",
       "offscreen",
-      "sidePanel"
+      "sidePanel",
+      "unlimitedStorage"
     ]
   }
 }
